--- a/HTML-CSS-JS/lesson01-html-basic/index.html
+++ b/HTML-CSS-JS/lesson01-html-basic/index.html
@@ -57,7 +57,79 @@
             <p>Este texto tem uma <u>palavra</u> em destaque.</p>
             
             <p>Este texto tem uma palavra <s>incorreta</s>.</p>
-        </section>   
+        </section> 
+        
+        <hr>
+        <section>
+            <h3>Navegação do Site</h3>
+
+            <ul>
+                <li>Página Principal</li>
+                <li>Sobre Nós</li>
+                <li>Newsletter</li>
+            </ul>
+
+            <h2>FAQ</h2>
+            <ol>
+                <li>O que é HTML?</li>
+                <li>Como o CSS funciona?</li>
+                <li>Para que serve o JS?</li>
+            </ol>
+        </section>
+
+        <hr>
+
+        <section>
+            <table border="10" width="100%">
+                <tr>
+                    <th>Produto</th>
+                    <th>Descrição</th>
+                    <th>Preço</th>
+                </tr>
+                <tr>
+                    <td>Notebook</td>
+                    <td>Notebook gamer com uma RTX 4070</td>
+                    <td>R$ 1000</td>
+                </tr>
+                <tr>
+                    <td>Playstation 5</td>
+                    <td>Console super divertido da Sony</td>
+                    <td>R$ 1200</td>
+                </tr>
+                <tr>
+                    <td>Bicicleta</td>
+                    <td>Caloi 10 fantástica</td>
+                    <td>R$ 300</td>
+                </tr>
+                <tr>
+                    <td colspan="3">Total: R$ 2.500</td>
+                </tr>
+            </table>
+        </section>
+
+        <hr>
+
+        <section>
+            <h2>Login</h2>
+            <form>
+                <label for="nomeUsuario">Nome de Usuário</label>
+                <input type="text">
+
+                <br><br>
+
+                <label for="senha">Senha</label>
+                <input type="password">
+            </form>
+        </section>
+
+        <hr>
+
+        <footer>
+            <h2>Rodapé da Página</h2>
+
+            &lt;Aprendendo HTML&gt;
+            <p>Desenvolvido por Thais&copy;</p>
+        </footer>
     </body>
 
 </html>
