Aula 22, Estruturas Essenciais do HTML

--- a/HTML-CSS-JS/lesson01-html-basic/index.html
+++ b/HTML-CSS-JS/lesson01-html-basic/index.html
@@ -7,6 +7,74 @@
         <meta name="keywords" content="Web Development, HTML, CSS, Javascript">
         <meta name="author" content="Perna Longa">
         <meta name="description" content="Este site trata de conteúdos introdutórios do desenvolvimento Web.">
+
+        <style>
+            h1 {
+                color: rgb(191, 17, 191);
+                font-size: 40px;
+            }
+
+            a {
+                text-decoration: none;
+                font-weight: bold;
+                color: green;
+                background-color: greenyellow;
+                border: 2px solid;
+            }
+
+            a:link {
+                color: red;
+            }
+
+            a:visited {
+                color:brown;
+            }
+
+            a:hover {
+                color: purple;
+                background-color: #fff;
+            }
+
+            a:active {
+                color: black;
+            }
+
+            p {
+                background-color: black;
+                color: white;
+                text-align: justify;
+                letter-spacing: normal;
+                word-spacing: 20px;
+                text-transform: uppercase;
+            }
+
+            ul {
+                list-style-type: none;
+                border: 1px solid purple;
+                margin-bottom: 10px;
+                padding-top: 10px;
+            }
+
+            li {
+                margin-bottom: 10px;
+            }
+
+            ol {
+                list-style-type: upper-latin;
+                border: 1px solid black;
+                padding-top: 10px;
+            }
+
+            table {
+                border: 2px solid red;
+                width: 100%;
+                text-align: center;
+            }
+
+            th,td {
+                border: 1px solid orange
+            }
+        </style>
     </head>
 
     <body>
@@ -19,7 +87,7 @@
 
         <header>
             <h1>Bem vindo ao nosso site</h1>
-            <h2>Bem vindo ao nosso site</h2>
+            <h2 style="color:blue">Bem vindo ao nosso site</h2>
             <h3>Bem vindo ao nosso site</h3>
             <h4>Bem vindo ao nosso site</h4>
             <h5>Bem vindo ao nosso site</h5>
@@ -80,7 +148,7 @@
         <hr>
 
         <section>
-            <table border="10" width="100%">
+            <table>
                 <tr>
                     <th>Produto</th>
                     <th>Descrição</th>
